--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,2 +1,3 @@
 keyoxide: https://keyoxide.org/aspe:keyoxide.org:52NWP2DE2LFVBSGL5KPSIYNC2I
 github: https://github.com/oxmhpark
+blog-repo: https://github.com/oxmhpark/blog
