프로필에 메모장 추가

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,3 +1,4 @@
 keyoxide: https://keyoxide.org/aspe:keyoxide.org:52NWP2DE2LFVBSGL5KPSIYNC2I
 github: https://github.com/oxmhpark
 blog-repo: https://github.com/oxmhpark/blog
+memo: https://memo.nemorium.net
