페이지 추가：README.md

--- a/_config.yml
+++ b/_config.yml
@@ -188,7 +188,7 @@ exclude:
   - Gemfile.lock
   - LICENSE
   - CNAME
-  - README.md
+#  - README.md
   - _archive_categories/__TEMPLATE__.md
   - _archive_tags/__TEMPLATE__.md
   - _archive_years/__TEMPLATE__.md
