설정：고정 페이지의 메타 데이터 노출 끄기

--- a/_config.yml
+++ b/_config.yml
@@ -119,9 +119,7 @@ defaults:
       path: "_entry_pages"
     values:
       layout: page
-      meta:
-        - date
-        - lastmod
+      meta: nil
   -
     scope:
       path: "_entry_plays"
